--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ GENDER:<input type="radio" name="gender">MALE
        <input type="radio" name="gender">FEMALE
        <input type="radio" name="gender">OTHERS 
 
-
+<button type=submit"value"submit"> SUBMIT YOUR RESPONSES</button>
 
 
 
