--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ EMAIL ADDRESS:<input type="text"placeholder="ENTER EMAIL"><br>
 
 GENDER:<input type="radio" name="gender">MALE
        <input type="radio" name="gender">FEMALE
-       <input type="radio" name="gender">OTHERS 
+       <input type="radio" name="gender">OTHERS<br> 
 
 <button type=submit"value"submit"> SUBMIT YOUR RESPONSES</button>
 
