--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@ GENDER:<input type="radio" name="gender">MALE
 <br>
 <br>
 <br>       
-<button type=submit"value"submit"> SUBMIT YOUR RESPONSES</button>
-
-
-
 </form>
+       <button oneclick="popup()" id="pop">SUBMIT YOUR RESPONSES</button>
+     
+<script>
+      function popup(){
+           alert("your resposes are submitted");
+}
+</script>
 </body>
 </html>
