--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ GENDER:<input type="radio" name="gender">MALE
      
 <script>
       function popup(){
-           alert("your resposes are submitted");
+           alert("THIS FORM IS SUBMITTED SUCCESSFULLY");
 }
 </script>
 </form>
