--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head> <title> JITENDER TANWAR </title></head>
 <body> 
 <h3> FORM </h3>
-<form> 
+ 
+<form id ="form"onsubmit="alert('THE FORM IS SUBMIITED SUCCESSFULLY')"> 
+
 FIRST NAME:<input type="text"placeholder="ENTER YOUR NAME"><br>
 <br>
 <br>
 LAST NAME:<input type="text"placeholder="ENTER LAST NAME"><br>
+<br>
+<br>
+GENDER:<input type="radio" name="gender">MALE
+       <input type="radio" name="gender">FEMALE
+       <input type="radio" name="gender">OTHERS<br>
+<br>
+<br>
+AGE:<input type="text"placeholder="ENTER YOUR AGE"><br>
 <br>
 <br>
 CONTACT NUMBER:<input type="text"placeholder="ENTER NUMBER"><br>
@@ -15,20 +25,11 @@ CONTACT NUMBER:<input type="text"placeholder="ENTER NUMBER"><br>
 <br>
 EMAIL ADDRESS:<input type="text"placeholder="ENTER EMAIL"><br>
 <br>
-<br>       
-GENDER:<input type="radio" name="gender">MALE
-       <input type="radio" name="gender">FEMALE
-       <input type="radio" name="gender">OTHERS<br> 
+<br>
+PASSWORD:<input type="password"placeholder="ENTER PASSWORD"><br>
 <br>
 <br>
-<br>       
-       <button oneclick="popup()" id="pop">SUBMIT YOUR RESPONSES</button>
-     
-<script>
-      function popup(){
-           alert("THIS FORM IS SUBMITTED SUCCESSFULLY");
-}
-</script>
+<button type=submit"value="submit">SUBMITY YOUR RESPONSES</button>
 </form>
 </body>
 </html>
